// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Typography match its snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  margin: 0;
  font-size: 16px;
  line-height: 1.5rem;
  font-weight: normal;
  text-align: inherit;
  color: inherit;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
>
  Test text
</span>
`;

exports[`Component: Typography should accept a custom display 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  margin: 0;
  font-size: 16px;
  line-height: 1.5rem;
  font-weight: normal;
  text-align: inherit;
  color: inherit;
  display: block;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
  display="block"
>
  Text
</span>
`;

exports[`Component: Typography should accept a custom lineHeight 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  margin: 0;
  font-size: 16px;
  line-height: 1.5rem;
  font-weight: normal;
  text-align: inherit;
  color: inherit;
  line-height: 3rem;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
>
  Text
</span>
`;

exports[`Component: Typography should accept a custom size 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  margin: 0;
  font-size: 16px;
  line-height: 1.5rem;
  font-weight: normal;
  text-align: inherit;
  color: inherit;
  font-size: 2rem;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
  size={2}
>
  Text
</span>
`;
